<resources>
    <string name="app_name">Workers</string>
    <string name="app_name_s">WORKERS</string>
    <!--Felder-->
    <string name="login_email_hint">Name</string>
    <string name="privatperson">Privat</string>
    <string name="gewerbe">Gewerblich</string>
    <string name="suche">Suchen</string>
    <string name="emailEingabe">Dein E-Mail und Passwort</string>
    <string name="email">E-Mail-Adresse:</string>
    <string name="firmenMail">E-Mail-Adresse:</string>
    <string name="kontaktDaten">Kontaktdaten</string>
    <string name="bedingungenDatenschutz">Indem du dich registrierst, akzeptierst du unsere Nutzungsbedingungen und Datenschutzrichtlinien.</string>
    <string name="erlaubeKontakt">Mit meiner Registrierung erlaube ich es Worker, mich per E-Mail, SMS oder Telefon zu kontaktieren (z. B. für Newsletter oder Umfragen). Diese Einwilligung kann ich jederzeit in den Einstellungen widerrufen.</string>
    <string name="welcheDienste">Welche Dienstleistungen bieten Sie an?</string>
    <string name="welcheKeywords">Welche Tätigkeiten sprechen Sie an?</string>



    <string name="profilName">Profilname</string>
    <string name="firmenName">Firmenname</string>
    <string name="firmenVorNachname">Vor- und Nachname</string>

    <string name="login_telefon_hint">Telefonnummer:</string>
    <string name="password">Passwort</string>
    <string name="passwordSecond">Passwort bestätigen</string>
    <!--Buttons-->
    <string name="login_button_text">Einlogen</string>
    <string name="reg_button_text">Regestrieren</string>
    <string name="next_button_text">Weiter</string>

    <string name="signup_slash">Neu hier?</string>
    <string name="signup_slash_go_to_registr">Registrieren!</string>

    <!--Fehler-->
    <string name="invalid_name">Hoppla! Hier sollte ein Name stehen.</string>
    <string name="invalid_telefon">Ups! Falsche Nummer. Noch einmal, bitte.</string>
    <string name="invalid_login_name">Ungültiger Login-Name</string>
    <string name="invalid_phone_not_exit">Eingegebene Telefonnummer nicht regestriert</string>
    <string name="invalid_phone_ready_registr">Eingegebene Telefonnummer wurde bereits regestriert</string>

    <string name="invalid_firmen_name">Ungültiger Firmen-Name</string>
    <string name="invalid_email_name">Ungültiger E-Mail Adresse</string>
    <string name="invalid_passwort_strong">Das Passwort ist zu einfach.</string>
    <string name="invalid_passwort">Passwort fehlt</string>
    <string name="invalid_passwort_second">Passwortwiederholung fehlt</string>
    <string name="invalid_passwort_ident_check">Passwörter sind unterschiedlich</string>

    <string name="empty_firmen_name">Bitte Firmen-Name eingeben</string>
    <string name="empty_profession_secected">Wählen Sie bitte mindestens eine Profession aus</string>


    <string name="back_button">Zurück</string>
    <string name="notification_message"><b>Noch ein Moment Geduld!</b>\nDer Code trifft in 30 Sekunden auf Ihrem Handy ein</string>
    <string name="notification_no_sms">Kein Code erhalten?</string>
    <string name="resend_sms_code">Du kannst die SMS in 60 Sekunden erneut senden</string>

    <string name="select_role">Выберите свою роль!</string>
    <string name="customer">Заказчик</string>
    <string name="executor">Исполнитель</string>
    <string name="continue_text">Продолжить</string>
    <string name="phone">телефон</string>
    <string name="firstname_lastname">имя и фамилия</string>

    <string name="company_name">фирменное имя</string>
    <string name="work_experience">опыт работ</string>
    <string name="link_of_site">ссылка на сайт</string>
    <string name="service_radius">индекс и радиус зоны обслуживания</string>
    <string name="contact_info">контактная информация</string>
    <string name="about_me">о себе</string>
    <string name="service_category">категории услуг</string>
    <string name="legal_representation">юридическое представление</string>
    <string name="enter_otp">Введите смс-код, отправленный на ваш номер телефона</string>
    <string name="sms_code">смс-код</string>


    <string name="invalid_phone">Номер телефона не действителен</string>

    <string name="invalid_password">Пароль не действителен</string>

    <string name="invalid_comp_name">Название компании недействительно</string>
    <string name="invalid_experience">Опыт работы должен быть не пустым</string>
    <string name="field_must_be_not_empty">Поле должно быть не пустым</string>
    <string name="choose_image">Выберите изображение для логотипа</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>