<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:src="@drawable/otp_icon"
        app:tint="@color/my_primary"
        android:layout_weight="20"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:letterSpacing="0.08"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_weight="5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_otp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/sms_code">

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="10">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/my_primary"
            android:text="@string/continue_text"
            android:layout_marginHorizontal="15dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="12dp"
                android:text="@string/continue_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"
            android:id="@+id/login_progress_bar"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:layout_marginHorizontal="15dp"
        android:text="@string/resend_sms_code"
        android:id="@+id/resend_otp_textview"/>

</LinearLayout>
