<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedStartRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/add_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <RadioGroup
                    android:id="@+id/rolleAuswahlen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp"
                        app:strokeColor="@color/textColor">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/privatperson"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:gravity="center_vertical"
                            android:text="@string/privatperson"
                            android:textColor="@color/textColor" />

                    </com.google.android.material.card.MaterialCardView>


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp"
                        app:strokeColor="@color/textColor">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/firma"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:padding="4dp"
                            android:text="@string/gewerbe"
                            android:textColor="@color/textColor" />
                    </com.google.android.material.card.MaterialCardView>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firmenName"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/firmenName"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColorHint="@color/hintColorText"
                android:visibility="gone"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/chat_color_sender"
                app:endIconDrawable="@drawable/firmen"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:helperTextTextAppearance="@style/FloatingHintTextAppearance"
                app:hintTextAppearance="@style/HintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eingabefirmenName"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:nextFocusDown="@id/inputPhoneNumber"
                    android:textColor="@color/hintColorText"
                    android:textSize="14sp"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginName"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/profilName"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColorHint="@color/hintColorText"
                android:visibility="visible"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/chat_color_sender"
                app:endIconDrawable="@drawable/username"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:helperTextTextAppearance="@style/FloatingHintTextAppearance"
                app:hintTextAppearance="@style/HintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eingabeloginName"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:nextFocusDown="@id/inputPhoneNumber"
                    android:textColor="@color/hintColorText"
                    android:textSize="14sp"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/gilroy_light"
                android:paddingLeft="29dp"
                android:shadowColor="@color/ntf_text_shadow"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/emailEingabe"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eMail"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:hint="@string/email"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColorHint="@color/hintColorText"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/chat_color_sender"
                app:endIconDrawable="@drawable/at"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:helperTextTextAppearance="@style/FloatingHintTextAppearance"
                app:hintTextAppearance="@style/HintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eingabeMail"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/inputPhoneNumber"
                    android:textColor="@color/hintColorText"
                    android:textSize="14sp"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwort"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="14dp"
                android:hint="@string/password"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColorHint="@color/textColor"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/chat_color_sender"
                app:endIconDrawable="@drawable/passwort"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperTextTextAppearance="@style/FloatingHintTextAppearance"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eingabePasswort"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/inputPhoneNumber"
                    android:textColor="@color/hintColorText"
                    android:textSize="14sp"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regestrierenBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_background"
                android:text="@string/reg_button_text"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
